fixed spacing on navbar-name

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,6 +14,7 @@ p{
 
 .navbar-name{
   color: #fff !important;
+  margin-left: 5vw;
 }
 
 .navbar{
@@ -84,27 +85,13 @@ hr.solid{
   background-color: #084C61;
   border-top: 4px solid #FFA630; 
   text-align: center;
-}
-
-.footer p{
-  margin-bottom: 0;
-}
-
-/* 
-.footer section{
-  margin-left: auto;
-  margin-right: auto;
-  width: 150px;
-  color: #fff !important;
-  font-size: small;
   letter-spacing: 2px;
 }
-*/
 
 .copyright p{
   letter-spacing: normal;
   font-size: xx-small !important;
-  color: #fff;
+  color: #d8dbe2;
 
 } 
 
